Custom hidden symbols color

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -29,3 +29,6 @@
 @syntax-gutter: darken(@syntax-fg, 26%);
 @syntax-guide:  fade(@syntax-fg, 15%);
 @syntax-accent: hsl(@syntax-hue, 100%, 66% );
+
+// Custom colors ---------------------------------
+@hidden-symbols: lighten(@syntax-bg, 12%);
